--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --mode production",
     "start": "webpack serve --mode development",
     "e2e": "jest e2e",
+    "test": "echo I have no tests yet",
     "coverage": "jest --coverage",
     "babel": "babel src -d dist",
     "lint": "eslint .",
